--- a/index.html
+++ b/index.html
@@ -16,10 +16,10 @@
   <meta property="og:description" content="A picture of a wet cat inside a bathtub.">
   <meta name="title" content="soggy cat">
   <meta property="og:title" content="soggy cat">
-  <meta property="og:image" content="/img/soggycat.webp">
+  <meta property="og:image" content="/img/soggy-cat-cat.gif">
 </head>
 <body>
-     <img id="soggycat" src="/img/soggycat.webp" data-tilt data-tilt-scale="1.06" />
+     <img id="soggycat" src="/img/soggy-cat-cat.gif" data-tilt data-tilt-scale="1.06" />
      <div id="sidemenu">
      <a href="/github/" class="menubuttonsa"><div class="menubuttons"><img src='/img/github.webp'/>GitHub</div></a>
      <a href="nocss/" class="menubuttonsa"><div class="menubuttons"><img src='/img/nocss.svg'/>No CSS</div></a>
