--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
   <link rel="preconnect" href="//fonts.googleapis.com">
   <link rel="preconnect" href="//fonts.gstatic.com" crossorigin>
   <link href="//fonts.googleapis.com/css2?family=Spline+Sans+Mono&display=swap" rel="stylesheet">
-  <link rel="icon" href="/img/icon.webp">
+  <link rel="icon" href="img/smallsog.webp">
   <link rel="canonical" href="./">
   <link rel="stylesheet" href="/static/main.css">
   <title>soggy cat</title>
