--- a/index.html
+++ b/index.html
@@ -7,15 +7,15 @@
   <link rel="icon" href="img/smallsog.webp">
   <link rel="canonical" href="./">
   <link rel="stylesheet" href="/static/main.css">
-  <title>soggy cat</title>
+  <title>soapy cat</title>
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <meta name="robots" content="index, follow">
   <meta http-equiv="Content-Type" content="text/html; charset=utf-8">
-  <meta name="description" content="A picture of a wet cat inside a bathtub.">
-  <meta property="og:description" content="A picture of a wet cat inside a bathtub.">
-  <meta name="title" content="soggy cat">
-  <meta property="og:title" content="soggy cat">
+  <meta name="description" content="soapy ca.t.. soggyyyy :3333">
+  <meta property="og:description" content="soapy ca.t.. soggyyyy :3333">
+  <meta name="title" content="soapy cat">
+  <meta property="og:title" content="soapy cat">
   <meta property="og:image" content="/img/soggy-cat-cat.gif">
 </head>
 <body>
