add bunny party nighcore

--- a/index.html
+++ b/index.html
@@ -28,5 +28,6 @@
      <script src='/static/vanillatilt.js'></script>
      <script src="/static/main.js"></script>
      <span id='player' style='display:none'></span>
+     <audio loop autoplay src="/audio/bunny.mp3"></audio>
 </body>
 </html>
